# beamshapy

./: .gitignore  BeamShaper.py  TF_script.py  TF_script2.py  TF_script3.py  TF_script_R.py  TF_script_sin.py  example_mask_design_BG_modul.py  example_mask_design_GSA.py  example_mask_design_fresnel.py  example_script.py  example_simple_FT_propagation.py  exploring_simple_masks.py  flatop_diff_sigma.py  main.py  mask_generator_manip.py  pyproject.toml  requirements.txt  test_unwrapping.py
.github/workflows/: publish-to-pypi.yml
beamshapy/: BeamShaper.py
beamshapy/amplitude_generation/: AmplitudeGenerator.py
beamshapy/intensity_generation/: IntensityGenerator.py  functions_Gerchberg_Saxton.py  functions_intensity_profile.py
beamshapy/mask_generation/: MaskGenerator.py
config/: input_beam.yml  simulation.yml
doc/: beamshapy.amplitude_generation.rst  beamshapy.intensity_generation.rst  beamshapy.mask_generation.rst  beamshapy.rst  beamshapy.spatial_profiles.rst  conf.py  getting_started.rst  index.rst  modules.rst
gui_elements/: FourierPlaneDetectionWidget.py  InfosEditorWidget.py  InputBeamEditorWidget.py  InputBeamWidget.py  SLMMaskWidget.py  SimulationConfigEditorWidget.py  TargetFieldDesignWidget.py  __init__.py
utils/: __init__.py  functions_masks_generation.py  helpers.py
