[tool.poetry]
name = "beamshapy"
version = "0.1.9"
description = "a package for simulations of laser beam shaping experiments"
authors = ["ayto <arouxel@laas.fr>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
numpy
scipy
matplotlib
h5py
pyyaml
pyqt5


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
